perf: optimize frontend and backend load times

--- a/workspace/shadcn-ui/hatch-crm/apps/api/tsconfig.json
+++ b/workspace/shadcn-ui/hatch-crm/apps/api/tsconfig.json
@@ -11,6 +11,8 @@
     "skipLibCheck": true,
     "outDir": "dist",
     "baseUrl": "./",
+    "incremental": true,
+    "removeComments": true,
     "paths": {
       "@hatch/db": [
         "../../packages/db/src"
