--- a/workspace/shadcn-ui/hatch-crm/infra/docker/docker-compose.yml
+++ b/workspace/shadcn-ui/hatch-crm/infra/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   postgres:
-    image: postgres:16-alpine
+    image: pgvector/pgvector:pg16
     restart: unless-stopped
     environment:
       POSTGRES_USER: hatch
