Fix Railway Dockerfile to build monorepo

--- a/workspace/shadcn-ui/hatch-crm/Dockerfile
+++ b/workspace/shadcn-ui/hatch-crm/Dockerfile
@@ -1,20 +1,17 @@
 FROM node:22-alpine
 
-WORKDIR /app
-
-# Copy lockfile and root package manifest for reproducible install
-COPY pnpm-lock.yaml package.json ./
-
 # System deps and pnpm
 RUN apk add --no-cache bash openssl && npm install -g pnpm
 
-# Install workspace deps
+# Copy the monorepo
+WORKDIR /app
+COPY workspace/shadcn-ui/hatch-crm ./workspace/shadcn-ui/hatch-crm
+
+# Install dependencies from the monorepo root
+WORKDIR /app/workspace/shadcn-ui/hatch-crm
 RUN pnpm install --frozen-lockfile
 
-# Copy the rest of the monorepo
-COPY . .
-
-# Build API (and generate Prisma client) from monorepo root
+# Build API (and generate Prisma client)
 RUN pnpm --filter @hatch/db run generate && pnpm --filter @hatch/api run build:dist
 
 # Start the API
