--- a/workspace/shadcn-ui/vercel.json
+++ b/workspace/shadcn-ui/vercel.json
@@ -25,7 +25,7 @@
     },
     {
       "src": "/favicon.ico",
-      "dest": "favicon.ico"
+      "dest": "favicon.svg"
     },
     {
       "src": "/favicon.svg",
