--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "workspace/shadcn-ui/hatch-crm/apps/web"
-  command = "npm install -g pnpm@8.10.0 && pnpm install --frozen-lockfile && pnpm build"
+  command = "pnpm install --frozen-lockfile && pnpm build"
   publish = ".next"
 
 [[plugins]]
