--- a/workspace/shadcn-ui/hatch-crm/apps/web/package.json
+++ b/workspace/shadcn-ui/hatch-crm/apps/web/package.json
@@ -15,6 +15,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@hatch/shared": "workspace:*",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.1.2",
