--- a/workspace/shadcn-ui/supabase/config.toml
+++ b/workspace/shadcn-ui/supabase/config.toml
@@ -113,19 +113,9 @@ auth_token = "env(SUPABASE_AUTH_SMS_TWILIO_AUTH_TOKEN)"
 [auth.sms.test_otp]
 # 4152127777 = "123456"
 
-# Configure one of the supported OAuth providers: `apple`, `azure`, `bitbucket`,
+# Configure one of the supported OAuth providers: `azure`, `bitbucket`,
 # `discord`, `facebook`, `github`, `gitlab`, `google`, `keycloak`, `linkedin`, `notion`, `twitch`,
 # `twitter`, `slack`, `spotify`, `workos`, `zoom`.
-[auth.external.apple]
-enabled = false
-client_id = ""
-# DO NOT commit your OAuth provider secret to git. Use environment variable substitution instead:
-secret = "env(SUPABASE_AUTH_EXTERNAL_APPLE_SECRET)"
-# Overrides the default auth redirectUrl.
-redirect_uri = ""
-# Overrides the default auth provider URL. Used to support self-hosted gitlab, single-tenant Azure,
-# or any other third-party OIDC providers.
-url = ""
 
 [auth.external.azure]
 enabled = false
