--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@vercel/analytics": "^1.6.1",
 		"axios": "^1.13.2",
 		"jsonwebtoken": "^9.0.2",
 		"socket.io-client": "^4.8.1"
