chore(db): guard migrations + QA evidence harness

--- a/workspace/shadcn-ui/hatch-crm/package.json
+++ b/workspace/shadcn-ui/hatch-crm/package.json
@@ -11,8 +11,10 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "db:migrate": "pnpm --filter @hatch/db migrate",
+    "db:migrate": "node scripts/db-migrate-guard.mjs",
+    "db:postcheck": "pnpm exec ts-node scripts/staging-postcheck.ts",
     "db:seed": "pnpm --filter @hatch/db seed",
+    "qa:seed": "pnpm exec ts-node scripts/qa-seed.ts",
     "ci": "turbo run lint test build",
     "web:lint": "pnpm --filter @hatch/web lint",
     "web:test": "pnpm --filter @hatch/web test -- --run",
